--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# wangjun add
+
+.idea
+.idea/
+
+# wangjun add
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -83,6 +92,7 @@ celerybeat-schedule
 .venv
 env/
 venv/
+venv_*/
 ENV/
 
 # Spyder project settings
