190419 - 1、将 wj_tools 移动到其他项目。 2、修改忽略，允许 .idea ， 不允许 workspace.xml 3、上传几个工程的 .idea 环境

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 # wangjun add
 
-.idea
-.idea/
-.idea\
 
+.idea/workspace.xml
+/.idea/workspace.xml
+*/.idea/workspace.xml
+*/*/.idea/workspace.xml
+*/*/*/.idea/workspace.xml
+
+
+# wangjun add
 
 
 # Byte-compiled / optimized / DLL files
