--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# wangjun add
+﻿# wangjun add
 
 
 .idea/workspace.xml
@@ -7,6 +7,7 @@
 */*/.idea/workspace.xml
 */*/*/.idea/workspace.xml
 markdown*.xml
+markdown*/
 
 # wangjun add
 
